feat:     Added simple benchmarks     Implemented sandbox service (added e2e tests)     Changed Dockerfile to decrise cache invalidation
